# openai-rs

./: Cargo.toml  README.md
examples/: completion.rs  create-image.rs  edit.rs  image.rs
src/: error.rs  lib.rs  main.rs
src/chat_completions/: mod.rs
src/client/: mod.rs
src/completions/: mod.rs
src/edits/: mod.rs
src/images/: mod.rs
src/models/: mod.rs
