[package]
name = "openairs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple and efficient wrapper around the OpenAI API"
readme = "README.md"
homepage = "https://github.com/0xKitsune/openai-rs"
repository = "https://github.com/0xKitsune/openai-rs"
keywords = ["openai", "chatgpt", "gpt", "ai"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.13", features = ["json"] }
serde_json = "1.0.85"
serde = {version="1.0.145", features = ["derive"]}
tokio = { version = "1.24.1", features = ["full"] }
async-trait = "0.1.64"
thiserror = "1.0.36"
