[package]
name = "openairs"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "A simple and efficient wrapper around the OpenAI API"
readme = "README.md"
homepage = "https://github.com/0xKitsune/openai-rs"
repository = "https://github.com/0xKitsune/openai-rs"
keywords = ["openai", "chatgpt", "gpt", "ai"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.63"
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
